update nas debain chinese support

--- a/_posts/2021-03-13-nas安装过程-diy.md
+++ b/_posts/2021-03-13-nas安装过程-diy.md
@@ -324,6 +324,41 @@ services:
 networks:
   mynet:
     external:
-      name: mynets
+      name: mynet
+```
+
+### 部署Gogs
+
+```do
+---
+version: "2.1"
+services:
+  gogs:
+    image: gogs/gogs
+    container_name: gogs
+    volumes:
+      - <path to data>:/data
+    ports:
+      - 10022:22
+      - 10080:3000
+    networks:
+      - mynet
+    restart: unless-stopped
+
+networks:
+  mynet:
+    external:
+      name: mynet
+```
+
+#### debain终端中文显示乱码
+
+```bash
+# 启动终端
+apt-get install locales
+# 重新配置LOCALE
+dpkg-reconfigure locales
+# 运行LOCALE命令检查当前的LOCALE环境
+locale
 ```
 
