--- a/_posts/2021-03-13-nas安装过程-diy.md
+++ b/_posts/2021-03-13-nas安装过程-diy.md
@@ -351,7 +351,7 @@ networks:
       name: mynet
 ```
 
-#### debain终端中文显示乱码
+### debain终端中文显示乱码
 
 ```bash
 # 启动终端
@@ -362,3 +362,43 @@ dpkg-reconfigure locales
 locale
 ```
 
+### linux dns 总是被重置
+
+根据一般思路会去更改resolv.conf的内容，但是你发现只要重启机器你设置的nameserver还是会被改成127.0.0.53
+
+因此，需要去/etc/systemd/resolved.conf修改DNS服务器的地址如下：
+
+```
+#  This file is part of systemd.
+#
+#  systemd is free software; you can redistribute it and/or modify it
+#  under the terms of the GNU Lesser General Public License as published by
+#  the Free Software Foundation; either version 2.1 of the License, or
+#  (at your option) any later version.
+#
+# Entries in this file show the compile time defaults.
+# You can change settings by editing this file.
+# Defaults can be restored by simply deleting this file.
+#
+# See resolved.conf(5) for details
+
+[Resolve]
+DNS=8.8.8.8 114.114.114.114
+#FallbackDNS=
+#Domains=
+#LLMNR=yes
+#MulticastDNS=yes
+#DNSSEC=allow-downgrade
+#DNSOverTLS=no
+#Cache=yes
+#DNSStubListener=yes
+#ReadEtcHosts=yes
+```
+
+![image-20210401160030469](2021-03-13-nas安装过程-diy.assets/image-20210401160030469.png)
+
+然后执行：
+
+\###重启systemd-resolved
+service systemd-resolved restart
+就可以了
