--- a/_posts/2021-03-13-nas安装过程-diy.md
+++ b/_posts/2021-03-13-nas安装过程-diy.md
@@ -395,7 +395,7 @@ DNS=8.8.8.8 114.114.114.114
 #ReadEtcHosts=yes
 ```
 
-![image-20210401160030469](2021-03-13-nas安装过程-diy.assets/image-20210401160030469.png)
+![image-20210401160030469](/assets/img/post/image-20210401160030469.png)
 
 然后执行：
 
