--- a/_posts/2021-03-13-nas安装过程-diy.md
+++ b/_posts/2021-03-13-nas安装过程-diy.md
@@ -368,6 +368,12 @@ locale
 
 因此，需要去/etc/systemd/resolved.conf修改DNS服务器的地址如下：
 
+```properties
+DNS=8.8.8.8 114.114.114.114
+```
+
+修改后的`/etc/systemd/resolved.conf`为:
+
 ```
 #  This file is part of systemd.
 #
@@ -394,8 +400,6 @@ DNS=8.8.8.8 114.114.114.114
 #DNSStubListener=yes
 #ReadEtcHosts=yes
 ```
-
-![image-20210401160030469](/assets/img/post/image-20210401160030469.png)
 
 然后执行：
 
